<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">



    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:id="@+id/txt_title"
            android:text="@string/title"
            style="@style/largeTextStyle"/>

        <TextView
            android:id="@+id/txt_current_player"
            android:text="@string/player_format"
            android:layout_marginVertical="@dimen/margin_small"
            style="@style/normalTextStyle"/>

        <Button
            android:id="@+id/btn_play"
            android:text="@string/play"
            style="@style/longButtonStyle" />

        <Button
            android:id="@+id/btn_quit"
            android:text="@string/QUIT"
            style="@style/longButtonStyle" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_small">

            <ImageButton
                android:id="@+id/ibtn_leaderboards"
                android:background="@drawable/button_leaderboards"
                android:layout_marginRight="@dimen/margin_large"
                style="@style/squareButtonStyle"/>

            <ImageButton
                android:id="@+id/ibtn_options"
                android:background="@drawable/button_options"
                style="@style/squareButtonStyle"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>